feat: shamir update apis
